1999-06-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Fix typo with DECL_H_ERRNO test

	* ntpd/ntp_loopfilter.c: Lose syscall decl, it's handled in
	l_stdlib.h now.

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/ntp_proto.c (proto_config): Don't set sys_bclient on
	PROTO_MULTICAST_ADD, only caller can decide; remove wrong set on
	PROTO_MULTICAST_DEL.

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/refclock_parse.c (stream_receive): Cast size_t to int to
	match format.
	(local_receive): Likewise.
	(trimbletaip_event): Likewise.
	(stream_receive): Cast struct timeval members to long to match
	format.
	(local_receive): Likewise.

	* ntpd/ntp_util.c (stats_config): Cast size_t to int to match
	format.

	* libparse/clk_rawdcf.c (cvt_rawdcf): Cast ptr difference to int
	to match format.
	* ntpd/refclock_parse.c (gps16x_poll): Likewise.

	* ntpd/ntp_filegen.c (filegen_open): Use long format, cast arg to
	match. 

	* ntpd/refclock_parse.c (list_err): Use long format to match arg.
	(parse_statistics): Likewise.
	(gps16x_message): Likewise.
	(cvt_ts): Use long format, cast args to match.
	(parse_start): Add missing arg.
	(gps16x_message): Swap args to match format.

	* ntpd/ntpd.c (ntpdmain): Cast uid to long, adapt format.

	* ntpd/ntp_intres.c (readconf): Use long format to match arg.
	* ntpd/ntp_io.c (getrecvbufs): Likewise.
	* ntpd/ntp_proto.c (default_get_precision): Likewise.

	* ntpd/ntp_loopfilter.c (local_clock): Cast clock_panic to int to
 	match format.

	* ntpd/ntp_io.c (io_multicast_add): Print s_addr member, not
	struct in_addr, to match format.

	* include/ntp_stdlib.h: Declare msyslog() as printf-like for gcc
	format checking.

Fri May 28 16:39:35 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpdc/ntpdc_ops.c (iostats): Align timereset line.

	* ntpq/ntpq_ops.c (doopeers): Properly align header.

	* ntpdc/ntpdc_ops.c (debug): Removed declaration, already in
	ntp_stdlib.h.